[project]
name = "mcp-scraping-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.51.0",
    "langchain>=0.3.25",
    "dotenv<=0.9.9",
    "python-dotenv",
    "langgraph>=0.4.3",
    "langchain-mcp-adapters>=0.0.11",
    "langchain-anthropic>=0.3.13",
]
